// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button respects the "disabled" prop 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #24292f;
  background-color: #f6f8fa;
  border: 1px solid rgba(31,35,40,0.15);
  box-shadow: 0 1px 0 rgba(31,35,40,0.04),inset 0 1px 0 rgba(255,255,255,0.25);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: #f3f4f6;
  border-color: rgba(31,35,40,0.15);
}

.c0:focus {
  outline: solid 2px #0969da;
}

.c0:active {
  background-color: hsla(220,14%,94%,1);
}

.c0:disabled {
  color: #8c959f;
  background-color: #f6f8fa;
  border-color: rgba(31,35,40,0.15);
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonDanger renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #cf222e;
  border: 1px solid rgba(31,35,40,0.15);
  background-color: #f6f8fa;
  box-shadow: 0 1px 0 rgba(31,35,40,0.04);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: #ffffff;
  background-color: #a40e26;
  border-color: rgba(31,35,40,0.15);
  box-shadow: 0 1px 0 rgba(31,35,40,0.1);
}

.c0:active {
  color: #ffffff;
  background-color: hsla(356,72%,44%,1);
  box-shadow: inset 0 1px 0 rgba(76,0,20,0.2);
  border-color: rgba(31,35,40,0.15);
}

.c0:disabled {
  color: rgba(207,34,46,0.5);
  background-color: #f6f8fa;
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonInvisible renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #0969da;
  background-color: transparent;
  border: 0;
  border-radius: 6px;
  box-shadow: none;
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:disabled {
  color: #8c959f;
}

.c0:focus {
  outline: solid 2px #0969da;
}

.c0:hover {
  background-color: #f3f4f6;
}

.c0:active {
  background-color: hsla(220,14%,94%,1);
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonOutline renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #0969da;
  border: 1px solid rgba(31,35,40,0.15);
  background-color: #f6f8fa;
  box-shadow: 0 1px 0 rgba(31,35,40,0.04);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  color: #ffffff;
  background-color: #0969da;
  border-color: rgba(31,35,40,0.15);
  box-shadow: 0 1px 0 rgba(31,35,40,0.1);
}

.c0:active {
  color: #ffffff;
  background-color: hsla(212,92%,42%,1);
  box-shadow: inset 0 1px 0 rgba(0,33,85,0.2);
  border-color: rgba(31,35,40,0.15);
}

.c0:disabled {
  color: rgba(9,105,218,0.5);
  background-color: #f6f8fa;
  border-color: rgba(31,35,40,0.15);
}

<button
  className="c0"
  disabled={true}
/>
`;

exports[`ButtonPrimary renders correct disabled styles 1`] = `
.c0 {
  position: relative;
  display: inline-block;
  padding: 6px 16px;
  font-family: inherit;
  font-weight: 600;
  line-height: 20px;
  white-space: nowrap;
  vertical-align: middle;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 6px;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  text-align: center;
  font-size: 14px;
  color: #ffffff;
  border: 1px solid rgba(31,35,40,0.15);
  background-color: #1f883d;
  box-shadow: 0 1px 0 rgba(31,35,40,0.1);
}

.c0:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:focus {
  outline: none;
}

.c0:disabled {
  cursor: default;
}

.c0:disabled svg {
  opacity: 0.6;
}

.c0:hover {
  background-color: #1a7f37;
  border-color: rgba(31,35,40,0.15);
}

.c0:active {
  background-color: hsla(137,66%,28%,1);
  box-shadow: inset 0 1px 0 rgba(0,45,17,0.2);
}

.c0:disabled {
  color: rgba(255,255,255,0.8);
  background-color: #94d3a2;
  border-color: rgba(31,35,40,0.15);
}

<button
  className="c0"
  disabled={true}
/>
`;
